--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                                     <h3 class="timeline-title">
                                         Software Engineering
                                     </h3>
-                                    <h4 class="timeline-title">Higher Institute Of Computer Science - ISI Ariana</h4>
-                                    <h4 class="timeline-title">
+                                    <h4 >Higher Institute Of Computer Science - ISI Ariana</h4>
+                                    <h4 >
                                         <i class="fa fa-calendar"></i> 2022 - Present
                                     </h4>
                                 </div> 
@@ -122,8 +122,8 @@
                                 <div class="timeline-item">
                                     <div class="circle-dot"></div>
                                     <h3 class="timeline-title">Bachelor's degree in Network and Computer <br> Systems Engineering</h3>
-                                    <h4 class="timeline-title">Higher Institute Of Computer Science - ISI Ariana</h4>
-                                    <h4 class="timeline-title">
+                                    <h4 >Higher Institute Of Computer Science - ISI Ariana</h4>
+                                    <h4 >
                                         <i class="fa fa-calendar"></i> 2019 - 2022
                                     </h4>
                                 </div>
@@ -469,13 +469,13 @@
                    
                     <div class="certif_card">
                         <img src="files/Certif/kubernetes.png" alt="" class="certif_img">
-                        <h3 class="certif_title"> Introduction to Kubernetes</h3>
+                        <h2 class="certif_title"> <strong> Introduction to Kubernetes</strong> </h2>
                         </a>
                       </div>
 
                     <div class="certif_card">
                         <img src="files/Certif/AWS.png" alt="" class="certif_img">
-                        <h3 class="certif_title"> AWS Cloud Practionner (CLF-02) </h3>
+                        <h2 class="certif_title"> <strong> AWS Cloud Practionner (CLF-02)</strong>  </h2>
                         <a href="https://learn.kodekloud.com/certificate/b68a6547-6c1b-4079-bf7e-8cf34cf9c8dd" target="_blank" class="certif_button">
                           View <i class='bx bx-right-arrow-alt work_icon'></i>
                         </a>
@@ -483,7 +483,7 @@
 
                     <div class="certif_card">
                         <img src="files/Certif/DevOps.png" alt="" class="certif_img">
-                        <h3 class="certif_title"> Fundamentals of DevOps </h3>
+                        <h2 class="certif_title"> <strong> Fundamentals of DevOps</strong>  </h2>
                         <a href="https://learn.kodekloud.com/certificate/434c04a1-ccca-4bb9-bcf9-468f16ece6d5" target="_blank" class="certif_button">
                           View <i class='bx bx-right-arrow-alt work_icon'></i>
                         </a>
@@ -491,7 +491,7 @@
                    
                     <div class="certif_card">
                       <img src="files/Certif/CDOSS_Big_Data.png" alt="" class="certif_img">
-                      <h3 class="certif_title"> CDOSS Big Data Machine Learning with Apache Spark</h3>
+                      <h2 class="certif_title"> <strong> CDOSS Big Data Machine Learning with Apache Spark </strong> </h2>
                       <a href="https://cdoss.org/ines-boukhris/" target="_blank" class="certif_button">
                         View <i class='bx bx-right-arrow-alt work_icon'></i>
                       </a>
@@ -499,7 +499,7 @@
 
                     <div class="certif_card">
                         <img src="files/Certif/Azure_AI.png" alt="" class="certif_img">
-                        <h3 class="certif_title"> Microsoft Azure AI Fundamentals</h3>
+                        <h2 class="certif_title"> <strong>Azure AI Fundamentals </strong> </h2>
                         <a href="https://www.credly.com/earner/earned/badge/5b478d28-0562-49df-9632-8820832650a4" target="_blank" class="certif_button">
                           View <i class='bx bx-right-arrow-alt work_icon'></i>
                         </a>
@@ -507,7 +507,7 @@
 
                     <div class="certif_card">
                         <img src="files/Certif/Azure_Data.png" alt="" class="certif_img">
-                        <h3 class="certif_title"> Microsoft Azure Data Fundamentals</h3>
+                        <h2 class="certif_title"> <strong> Microsoft Azure Data Fundamentals </strong> </h>2
                         <a href="https://www.credly.com/earner/earned/badge/6d79088e-cd4a-4eba-95bc-4f0ffb6ddaca" target="_blank" class="certif_button">
                           View <i class='bx bx-right-arrow-alt work_icon'></i>
                         </a>
@@ -515,7 +515,7 @@
 
                     <div class="certif_card">
                         <img src="files/Certif/Excel.png" alt="" class="certif_img">
-                        <h3 class="certif_title"> Microsoft Excel 2019 Associate  </h3>
+                        <h2 class="certif_title"> <strong> Excel 2019 Associate  </strong>  </h2>
                         <a href="https://www.credly.com/earner/earned/badge/f03fefee-10b4-4a71-8cc1-cef7a7fb66b9" target="_blank" class="certif_button">
                           View <i class='bx bx-right-arrow-alt work_icon'></i>
                         </a>
@@ -523,7 +523,7 @@
 
                     <div class="certif_card">
                         <img src="files/Certif/scrum.png" alt="" class="certif_img">
-                        <h3 class="certif_title"> Scrum Fundamentals  </h3>
+                        <h2 class="certif_title"> <strong>Scrum Fundamentals </strong>   </h2>
                         <a href="https://www.scrumstudy.com/certification/verify?type=SFC&number=898788" target="_blank" class="certif_button">
                           View <i class='bx bx-right-arrow-alt work_icon'></i>
                         </a>
@@ -531,7 +531,7 @@
 
                     <div class="certif_card">
                         <img src="files/Certif/Try_Hack_Me.png" alt="" class="certif_img">
-                        <h3 class="certif_title"> Pre Security Learning Path  </h3>
+                        <h2 class="certif_title"> <strong>Security Learning Path </strong>   </h2>
                     </div>
                 </div>
 
@@ -586,9 +586,9 @@
     <!-------------------------- Footer section -------------------------->
     <footer class="footer">
         <div class="social-links">
-            <h3 style="color: #89e1f5;">Boukhris Ines</h3>
+            <h3 style="color: #50a6b9;">Boukhris Ines</h3>
             <div class="social">
-                <a href="mailto:inesboukhris20@gmail.com"><i class="fa fa-envelope"></i></a>
+                <a href="mailto:inesboukhris20@gmail.com"><i  class="fa fa-envelope "></i></a>
                 <a href="https://github.com/ines-22"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/ines-boukhris-ii22/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
