--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="about-content">
                     <h4>About Me</h4>
                     <ul>
-                      <li> Currently a <strong> 3rd-year software engineering student </strong>  at the Higher Institute of Computer Science  (ISI Ariana), I am seeking a <strong> PFE (end-of-study) </strong> PFE (end-of-study) internship opportunity to complete my academic journey. </li>
+                      <li> Currently a <strong> 3rd-year software engineering student </strong>  at the Higher Institute of Computer Science  (ISI Ariana), I am seeking a <strong> PFE (end-of-study) </strong> internship opportunity to complete my academic journey. </li>
                       <li> I am particularly interested in the fields of <strong>DevOps, Cloud, and Mobile Development</strong>.</li>
                       <li> I have gained experience in utilizing various tools and technologies in this fields. I am always eager to learn new skills and explore new challenges.</li> 
                       <li> I am looking for new opportunities to apply my knowledge and creativity to real-world problems.</li>
