--- a/index.html
+++ b/index.html
@@ -466,7 +466,13 @@
                     <h5>My Certifications</h5>
                 </div>
                 <div class="certif_container container grid">
-                   
+
+                    <div class="certif_card">
+                        <img src="files/Certif/Hackathon.pdf" alt="" class="certif_img">
+                        <h2 class="certif_title"> <strong> Hackathon "Empowering ISI with AI" </strong>  </h2>
+                        </a>
+                    </div>  
+                    
                     <div class="certif_card">
                         <img src="files/Certif/kubernetes.png" alt="" class="certif_img">
                         <h2 class="certif_title"> <strong> Introduction to Kubernetes</strong> </h2>
