--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                 <div class="certif_container container grid">
 
                     <div class="certif_card">
-                        <img src="files/Certif/Hackathon.pdf" alt="" class="certif_img">
+                        <img src="files/Certif/Hackathon.jpg" alt="" class="certif_img">
                         <h2 class="certif_title"> <strong> Hackathon "Empowering ISI with AI" </strong>  </h2>
                         </a>
                     </div>  
