--- a/index.html
+++ b/index.html
@@ -261,8 +261,12 @@
             <li>
                 <i class="bx bx-check" style="color: white;"></i> 
                 Security Scans:
-                File System Scan: Trivy scans for vulnerabilities in the codebase.
-                Static Analysis: SonarQube checks the code for bugs, vulnerabilities, and code smells.
+                <ul>
+                <li> File System Scan: Trivy scans for vulnerabilities in the codebase.</li>
+                <li>Static Analysis: SonarQube checks the code for bugs, vulnerabilities, and code smells. </li> 
+                </ul>
+
+
             </li>
             <li>
                 <i class="bx bx-check" style="color: white;"></i> 
